--- a/group_vars/galaxyFS-builder.yml
+++ b/group_vars/galaxyFS-builder.yml
@@ -13,7 +13,6 @@ galaxy_config_dir: "{{ galaxy_server_dir }}/config"
 galaxy_mutable_data_dir: "{{ galaxyFS_base_dir }}"
 galaxy_mutable_config_dir: "{{ galaxyFS_base_dir }}/var"
 galaxy_shed_tools_dir: "{{ galaxyFS_base_dir }}/shed_tools"
-galaxy_webserver_port: 8080
 
 galaxy_db_log: /tmp/pSQL.log
 
@@ -135,3 +134,15 @@ pulsar_optional_dependencies:
 # gvl setup details
 galaxy_repo: https://bitbucket.org/gvl/galaxy-dist-gvl
 galaxy_changeset_id: gvl
+galaxy_webserver_port: 8080
+galaxy_archive_path: /tmp/galaxy_archive
+
+# gvl archive upload details
+gvl_create_archive: True
+cloudman_bucket_name: cm-ng-dev
+galaxy_archive_name: galaxyFS-3.05.tar.gz
+OS_AUTH_URL: https://keystone.rc.nectar.org.au:5000/v2.0/
+OS_TENANT_ID: 377
+OS_TENANT_NAME: "GenomicsVL"
+OS_USERNAME: nuwan.goonasekera@unimelb.edu.au
+OS_PASSWORD: NWJhZDdjNjk3ODM1OWY5
