--- a/roles/gvl_image/tasks/main.yml
+++ b/roles/gvl_image/tasks/main.yml
@@ -1,3 +1,6 @@
+- include: install_system_packages.yml
+  when: not only_cleanup
+
 - include: install_gvldash.yml
   when: gvl_install_dash and not only_cleanup
 
@@ -9,4 +12,3 @@
 
 - include: install_tool_packages.yml
   when: gvl_install_dash and not only_cleanup
-
