--- a/cloud.yml
+++ b/cloud.yml
@@ -13,12 +13,12 @@
 #   % ansible-playbook -i inventory/builders cloud.yml --tags "machine-image"
 #     --extra-vars vnc_password=<make_up_a_pwd> [--extra-vars cleanup=yes]
 #
-- hosts: image-builder
+- hosts: localhost
+  connection: local
+# - hosts: image-builder
   # gather_facts: False  # Uncomment during dev only
   sudo: yes
   roles:
-    - galaxyprojectdotorg.galaxy-os
-    - galaxyprojectdotorg.cloudman-image
     - gvl.image
   tags: machine-image
 
@@ -28,8 +28,10 @@
 #
 #   % ansible-playbook -i inventory/builders cloud.yml --tags "galaxyFS"
 #
-- hosts: galaxyFS-builder
-  gather_facts: False  # Not making system-level changes so skip
+# - hosts: galaxyFS-builder
+#   gather_facts: False  # Not making system-level changes so skip
+- hosts: localhost
+  connection: local
   pre_tasks:
     - name: Assure galaxyFS dir exists
       file: path={{ galaxyFS_base_dir }} state=directory owner={{ galaxy_user_name }} group={{ galaxy_user_name }}
@@ -40,11 +42,6 @@
       file: path={{ galaxy_db_dir }} state=directory owner=postgres group=postgres
       sudo_user: root
   roles:
-     - role: galaxyprojectdotorg.cloudman-database
-       sudo: yes
-       sudo_user: postgres
-     - galaxyprojectdotorg.galaxy
-     - galaxyprojectdotorg.trackster
      - gvl.filesystem
   post_tasks:
     - name: Create Galaxy Install DB
