--- a/requirements_roles.txt
+++ b/requirements_roles.txt
@@ -4,3 +4,4 @@ galaxyprojectdotorg.cloudman-image
 galaxyprojectdotorg.cloudman-database
 galaxyprojectdotorg.trackster
 galaxyprojectdotorg.galaxy
+galaxyprojectdotorg.cloudman-galaxy-setup
