--- a/roles/gvl.filesystem/defaults/main.yml
+++ b/roles/gvl.filesystem/defaults/main.yml
@@ -5,8 +5,15 @@
 
 #-- Galaxy configs
 # Just the default values from the underlying role but required for post_tasks
+galaxy_vcs: hg
+galaxy_changeset_id: gvl
 galaxy_venv_dir: "{{ galaxy_server_dir }}/.venv"
 galaxy_config_file: "{{ galaxy_config_dir }}/galaxy.ini"
+
+cm_install_tools: no
+shed_tool_list_file: gvl.filesystem/files/scripts/shed_tool_list.yaml.gvl
+cm_install_data: no
+dbkeys_list_file: files/dbkeys_list.yaml.cloud
 
 galaxy_genome_data_path: /mnt/galaxyIndices/genomes
 galaxy_config_dir: "{{ galaxy_server_dir }}/config"
@@ -57,6 +64,8 @@ galaxy_config:
     file_path: "{{ galaxyFS_base_dir }}/files"
     tool_dependency_dir: "{{ galaxyFS_base_dir }}/tools"
     len_file_path: "{{ len_file_path }}"
+    shed_tool_data_path: "{{ galaxy_server_dir }}/tool-data/dm"
+    galaxy_data_manager_data_path: /mnt/galaxy/userIndices
 
     tool_config_file: "{{ galaxy_config_dir }}/tool_conf.xml,{{ galaxy_config_dir }}/shed_tool_conf_cloud.xml,{{ galaxy_shed_tool_conf_file }}"
     tool_data_table_config_path: "{{ galaxy_config_dir }}/tool_data_table_conf.xml"
@@ -104,18 +113,6 @@ galaxy_mutable_configs:
   - src: "{{ galaxy_server_dir }}/config/tool_sheds_conf.xml.sample"
     dest: "{{ galaxy_config['app:main']['tool_sheds_config_file'] }}"
 
-galaxy_config_files:
-  - src: welcome.html
-    dest: "{{ galaxy_server_dir }}/static/welcome.html"
-  - src: cloud.gif
-    dest: "{{ galaxy_server_dir }}/static/images/cloud.gif"
-  - src: cloud_text.png
-    dest: "{{ galaxy_server_dir }}/static/images/cloud_text.png"
-  - src: shed_tool_conf_cloud.xml
-    dest: "{{ galaxy_config_dir }}/shed_tool_conf_cloud.xml"
-  - src: job_conf.xml.cloud
-    dest: "{{ galaxy_config_dir }}/job_conf.xml"
-
 #-- Pulsar configs
 pulsar_server_dir: "{{ galaxyFS_base_dir }}/pulsar"
 pulsar_dependencies_dir: "{{ galaxyFS_base_dir }}/tools"
@@ -126,7 +123,6 @@ pulsar_optional_dependencies:
   - pycurl==7.19.3.1 # https://github.com/pycurl/pycurl/issues/201
   - uwsgi
   - drmaa
-  - kombu
   - requests
   - poster
   - psutil
