--- a/roles/gvl.filesystem/defaults/main.yml
+++ b/roles/gvl.filesystem/defaults/main.yml
@@ -5,13 +5,16 @@
 
 #-- Galaxy configs
 # Just the default values from the underlying role but required for post_tasks
+galaxyFS_base_dir: /mnt/galaxy
+galaxy_server_dir: "{{ galaxyFS_base_dir }}/galaxy-app"
+
 galaxy_vcs: hg
 galaxy_changeset_id: gvl
 galaxy_venv_dir: "{{ galaxy_server_dir }}/.venv"
 galaxy_config_file: "{{ galaxy_config_dir }}/galaxy.ini"
 
-cm_install_tools: no
-shed_tool_list_file: gvl.filesystem/files/scripts/shed_tool_list.yaml.gvl
+cm_install_tools: yes
+shed_tool_list_file: roles/gvl.filesystem/files/scripts/shed_tool_list.yaml.gvl
 cm_install_data: no
 dbkeys_list_file: files/dbkeys_list.yaml.cloud
 
