Added filesystem-presetup role and moved all playbook pre-tasks into it.

--- a/roles/gvl.filesystem/defaults/main.yml
+++ b/roles/gvl.filesystem/defaults/main.yml
@@ -5,6 +5,7 @@
 
 #-- Galaxy configs
 # Just the default values from the underlying role but required for post_tasks
+galaxy_user_name: galaxy
 galaxyFS_base_dir: /mnt/galaxy
 galaxy_server_dir: "{{ galaxyFS_base_dir }}/galaxy-app"
 
