--- a/roles/gvl.filesystem-presetup/tasks/main.yml
+++ b/roles/gvl.filesystem-presetup/tasks/main.yml
@@ -1,13 +1,15 @@
 - name: Assure galaxyFS dir exists
   file: path={{ galaxyFS_base_dir }} state=directory owner={{ galaxy_user_name }} group={{ galaxy_user_name }}
   sudo_user: root
-  tags: galaxyFS
+
+- name: Assure indicesFS dir exists
+  file: path={{ indicesFS_base_dir }} state=directory owner={{ galaxy_user_name }} group={{ galaxy_user_name }}
+  sudo_user: root
 
 - name: Create shed tools dir
   file: state=directory path={{ galaxy_shed_tools_dir }}
-  tags: galaxyFS
+  sudo_user: "{{ galaxy_user_name }}"
 
 - name: Create database dir
   file: path={{ galaxy_db_dir }} state=directory owner=postgres group=postgres
   sudo_user: root
-  tags: galaxyFS
