Forced playbook run as galaxy user

--- a/cloud.yml
+++ b/cloud.yml
@@ -35,6 +35,8 @@
     gvl_version: 3.05 Alpha 2
     gvl_flavour:
     gvl_build_date: "{{ ansible_date_time.iso8601 }}"
+  sudo: yes
+  sudo_user: galaxy
   gather_facts: False  # Not making system-level changes so skip
   roles:
      - gvl.filesystem
