--- a/inventory/builders.sample
+++ b/inventory/builders.sample
@@ -1,14 +1,14 @@
 package-builder ansible_ssh_user=ubuntu ansible_ssh_private_key_file=<path_to_your_private_ssh_key> ansible_ssh_host=<instance_ip>
 
-[image-builder]
+[gvl-image-hosts]
 <instance_ip>
 
-[galaxyFS-builder]
+[gvl-filesystem-hosts]
 <instance_ip>
 
 [builder:children]
-image-builder
-galaxyFS-builder
+gvl-image-hosts
+gvl-filesystem-hosts
 
 [builder:vars]
 ansible_ssh_user=ubuntu
