Fixed documentation + moved package update logic

--- a/roles/gvl.image/tasks/install_system_packages.yml
+++ b/roles/gvl.image/tasks/install_system_packages.yml
@@ -1,3 +1,9 @@
+- name: Update apt packages
+  apt: update_cache=yes
+
+- name: Install latest apt packages
+  apt: upgrade=dist
+
 - name: Install required system packages
   apt: pkg={{ item }} state=latest
   with_items:
