--- a/roles/gvl.image/tasks/configure_nginx.yml
+++ b/roles/gvl.image/tasks/configure_nginx.yml
@@ -1,6 +1,9 @@
 ---
 # Configure nginx
 
+- name: Overwrite with GVL nginx conf file
+  template: src=nginx.j2 dest=/etc/nginx/nginx.conf
+
 - name: Copy the GVL nginx conf overrides
   template: src={{ item.src }} dest="/etc/nginx/sites-enabled/{{ item.dest }}"
   with_items:
