Copied gvl init script and fixed up cmdline util install

--- a/roles/gvl.image/tasks/install_cmdline_utils.yml
+++ b/roles/gvl.image/tasks/install_cmdline_utils.yml
@@ -1,3 +1,6 @@
+- name: GVL Utils - Configure the GVL init script to run as an upstart job
+  template: src=gvlinit.j2 dest=/etc/init/gvlinit.conf
+
 - name: GVL Utils - Copy gvl scripts
   copy: src=scripts dest={{ gvl_install_path }} mode=0755 owner="ubuntu"
 
