--- a/roles/gvl.filesystem/defaults/main.yml
+++ b/roles/gvl.filesystem/defaults/main.yml
@@ -4,13 +4,15 @@
 #   Variables used when building galaxyFS
 
 #-- Galaxy configs
+cm_setup_galaxy: yes
+gvl_genomespace_server: "genomespace.genome.edu.au"
 # Just the default values from the underlying role but required for post_tasks
 galaxy_user_name: galaxy
 galaxyFS_base_dir: /mnt/galaxy
 indicesFS_base_dir: /mnt/galaxyIndices
 galaxy_server_dir: "{{ galaxyFS_base_dir }}/galaxy-app"
 
-galaxy_vcs: hg
+galaxy_vcs: git
 galaxy_changeset_id: gvl
 galaxy_venv_dir: "{{ galaxy_server_dir }}/.venv"
 galaxy_config_file: "{{ galaxy_config_dir }}/galaxy.ini"
@@ -135,8 +137,8 @@ pulsar_optional_dependencies:
   - psutil
 
 # gvl setup details
-galaxy_repo: https://bitbucket.org/gvl/galaxy-dist-gvl
-galaxy_changeset_id: gvl
+galaxy_git_repo: https://github.com/gvlproject/galaxy
+galaxy_changeset_id: gvl_4.00
 galaxy_webserver_port: 8080
 galaxy_archive_path: /tmp/galaxy_archive
 galaxy_admin_user_password: "TODO-GenerateRandomOrDeleteBootstrapUser"
