--- a/roles/gvl.filesystem/defaults/main.yml
+++ b/roles/gvl.filesystem/defaults/main.yml
@@ -141,13 +141,13 @@ pulsar_optional_dependencies:
 galaxy_git_repo: https://github.com/gvlproject/galaxy
 galaxy_changeset_id: gvl_{{ gvl_version }}
 galaxy_webserver_port: 8080
-galaxy_archive_path: /tmp/galaxy_archive
 galaxy_admin_user_password: "TODO-GenerateRandomOrDeleteBootstrapUser"
 
 # gvl archive upload details
 gvl_create_archive: False
 # cloudman_bucket_name: cm-ng-dev
-# galaxy_archive_name: galaxyFS-3.05.tar.gz
+gvl_fs_archive_name: "gvl-galaxyfs-{{ gvl_version }}.tar.gz"
+gvl_fs_archive_path: /tmp/galaxy_archive
 # OS_AUTH_URL: https://keystone.rc.nectar.org.au:5000/v2.0/
 # OS_TENANT_ID:
 # OS_TENANT_NAME:
