--- a/roles/gvl.filesystem/defaults/main.yml
+++ b/roles/gvl.filesystem/defaults/main.yml
@@ -38,7 +38,7 @@ gvl_fs_name: "GVL FileSystem"
 gvl_fs_flavour: default
 gvl_fs_build_date: "{{ ansible_date_time.iso8601 }}"
 gvl_version: "4.00"
-gvl_fs_version: {{ gvl_version }}
+gvl_fs_version: "{{ gvl_version }}"
 gvl_galaxy_brand: "GVL {{ gvl_version }}"
 
 galaxy_config:
