Make sure we have permissions to change ownership

--- a/roles/gvl.filesystem/tasks/set_version.yml
+++ b/roles/gvl.filesystem/tasks/set_version.yml
@@ -21,4 +21,5 @@
 
 - name: GVL FS - Copy GVL filesystem poststart scripts
   copy: src=scripts/poststart.d/ dest={{ galaxyFS_base_dir }}/gvl/poststart.d/ mode=0755 owner="ubuntu"
-
+  sudo: yes
+  sudo_user: root
