Ensure ubuntu apt version of ansible is uninstalled

--- a/roles/gvl.image/tasks/install_system_packages.yml
+++ b/roles/gvl.image/tasks/install_system_packages.yml
@@ -9,3 +9,8 @@
   with_items:
     - screen
     - environment-modules
+
+- name: Ensure apt version of ansible is uninstalled
+  apt: pkg={{ item }} state=absent
+  with_items:
+    - ansible
