Set gvldash service state to stopped after install

--- a/roles/gvl.image/tasks/install_gvldash.yml
+++ b/roles/gvl.image/tasks/install_gvldash.yml
@@ -59,4 +59,4 @@
   wait_for: port=8000 delay=5 state=started timeout=150
 
 - name: GVLDash - Stop the service
-  service: name=gvldash state=started
+  service: name=gvldash state=stopped
