Fixed typo in status message

--- a/roles/gvl.image/tasks/install_system_packages.yml
+++ b/roles/gvl.image/tasks/install_system_packages.yml
@@ -17,5 +17,5 @@
 - name: Ensure apt version of ansible is uninstalled
   apt: pkg=ansible state=absent
 
-- name: Ensure pip version of ansible is uninstalled
+- name: Ensure pip version of ansible is installed
   pip: name=ansible state=latest
