Added dependency on galaxy_tools role

--- a/requirements_roles.txt
+++ b/requirements_roles.txt
@@ -5,3 +5,4 @@ galaxyprojectdotorg.cloudman-database
 galaxyprojectdotorg.trackster
 galaxyprojectdotorg.galaxy
 galaxyprojectdotorg.cloudman-galaxy-setup
+galaxyprojectdotorg.galaxy-tools
