--- a/roles/gvl.filesystem/meta/main.yml
+++ b/roles/gvl.filesystem/meta/main.yml
@@ -19,3 +19,4 @@ dependencies:
   - { role: galaxyprojectdotorg.galaxy }
   - { role: galaxyprojectdotorg.trackster }
   - { role: galaxyprojectdotorg.cloudman-galaxy-setup }
+  - { role: galaxyprojectdotorg.galaxy-tools }
