--- a/roles/gvl.filesystem/defaults/main.yml
+++ b/roles/gvl.filesystem/defaults/main.yml
@@ -81,7 +81,7 @@ galaxy_config:
     tool_dependency_dir: "{{ galaxyFS_base_dir }}/tools"
     len_file_path: "{{ len_file_path }}"
     shed_tool_data_path: "{{ galaxy_server_dir }}/tool-data/dm"
-    galaxy_data_manager_data_path: /mnt/galaxyIndices
+    galaxy_data_manager_data_path: "{{ galaxy_genome_data_path }}"
 
     tool_config_file: "{{ galaxy_config_dir }}/tool_conf.xml,{{ galaxy_config_dir }}/shed_tool_conf_cloud.xml,{{ galaxy_shed_tool_conf_file }}"
     tool_data_table_config_path: "{{ galaxy_config_dir }}/tool_data_table_conf.xml"
