--- a/roles/gvl.filesystem/tasks/configure_galaxy.yml
+++ b/roles/gvl.filesystem/tasks/configure_galaxy.yml
@@ -10,3 +10,20 @@
   replace: dest="{{ galaxy_server_dir }}/{{ item }}" regexp="identity.genomespace.org" replace="{{ gvl_genomespace_server }}"
   with_items:
     - openid/genomespace.xml
+
+- Create tool folder for GATK2
+  file:
+    path: '{{ galaxyFS_base_dir }}/tools/gatk2'
+    state: 'directory'
+    mode: '0755'
+    owner: "{{ galaxy_user_name }}"
+
+- Fetch GATK2
+  get_url: url="https://swift.rc.nectar.org.au:8888/v1/AUTH_2bb45090fdb74f8c81359fbe723e4ab5/alonie/GenomeAnalysisTK-2.8.jar" dest="{{ galaxyFS_base_dir }}/tools/gatk2/GenomeAnalysisTK-2.8.jar"
+  sudo: yes
+  sudo_user: "{{ galaxy_user_name }}"
+
+- Set GATK2 Path
+  shell: "echo 'GATK2_PATH={{ galaxyFS_base_dir }}/tools/gatk2/GenomeAnalysisTK-2.8.jar; export GATK2_PATH' > /mnt/galaxy/tools/environment_settings/GATK2_PATH/iuc/gatk2/*/env.sh"
+  sudo: yes
+  sudo_user: "{{ galaxy_user_name }}"
