--- a/roles/gvl.filesystem/defaults/main.yml
+++ b/roles/gvl.filesystem/defaults/main.yml
@@ -19,7 +19,7 @@ galaxy_config_file: "{{ galaxy_config_dir }}/galaxy.ini"
 
 galaxy_tools_install_tools: yes
 galaxy_tools_create_bootstrap_user: yes
-galaxy_tools_delete_bootstrap_user: no
+galaxy_tools_delete_bootstrap_user: yes
 galaxy_tools_tool_list_file: roles/gvl.filesystem/files/scripts/shed_tool_list.yaml.gvl
 cm_install_data: no
 dbkeys_list_file: files/dbkeys_list.yaml.cloud
