Make sure bowtie2 executable can be found by tophat2

--- a/roles/gvl.filesystem/tasks/configure_galaxy.yml
+++ b/roles/gvl.filesystem/tasks/configure_galaxy.yml
@@ -28,4 +28,10 @@
   sudo: yes
   sudo_user: "{{ galaxy_user_name }}"
 
-
+# Patch up all bowtie2 executable paths so that there's a bowtie2-align executable in each (tophat2 looks for the bowtie2-align executable when running with modules on the commandline)
+- name: Patchup bowtie2 executable paths so they work with tophat2 and modules
+  shell: executable=/bin/bash cd {{ item }}/*/package*/*/; ln -s bowtie2 bowtie2-align
+  with_fileglob:
+    - {{ galaxyFS_base_dir }}/tools/bowtie2/*
+  sudo: yes
+  sudo_user: "{{ galaxy_user_name }}"
