--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,4 @@
 - src: https://github.com/gvlproject/gvl.ansible.filesystem.presetup
 - src: https://github.com/gvlproject/gvl.ansible.filesystem
+- src: https://github.com/gvlproject/microgvl.ansible.filesystem
 - src: https://github.com/gvlproject/gvl.ansible.image
