--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,11 @@
+- src: https://github.com/nuwang/ansible-galaxy-os
+  version: GCC2016
+  name: galaxyprojectdotorg.galaxy-os
+- src: https://github.com/nuwang/ansible-cloudman-image
+  version: GCC2016
+  name: galaxyprojectdotorg.cloudman-image
 - src: https://github.com/gvlproject/gvl.ansible.filesystem.presetup
 - src: https://github.com/gvlproject/gvl.ansible.filesystem
 - src: https://github.com/gvlproject/microgvl.ansible.filesystem
 - src: https://github.com/gvlproject/gvl.ansible.image
+  version: GCC2016
