--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,15 @@
+# Indirect requirements - not required but listed for convenience
+- src: https://github.com/galaxyproject/ansible-galaxy-os.git
+  name: galaxyproject.galaxy-os
+- src: https://github.com/gvlproject/ansible-cloudman-image.git
+  name: galaxyproject.cloudman-image
+- src: https://github.com/gvlproject/ansible-cloudman-database.git
+  name: galaxyproject.cloudman-database
+- src: https://github.com/gvlproject/ansible-cloudman-galaxy-setup.git
+  name: galaxyproject.cloudman-galaxy-setup
+- src: https://github.com/gvlproject/ansible-galaxy-tools.git
+  name: galaxyproject.galaxy-tools
+# Direct requirements
 - src: https://github.com/gvlproject/gvl.ansible.filesystem.presetup
 - src: https://github.com/gvlproject/gvl.ansible.filesystem
 - src: https://github.com/gvlproject/microgvl.ansible.filesystem
