--- a/inventory/builders.sample
+++ b/inventory/builders.sample
@@ -1,5 +1,8 @@
 package-builder ansible_ssh_user=ubuntu ansible_ssh_private_key_file=<path_to_your_private_ssh_key> ansible_ssh_host=<instance_ip>
 
+[localhost]
+127.0.0.1 ansible_python_interpreter=/usr/local/bin/python
+
 [gvl-image-hosts]
 <instance_ip>
 
