--- a/playbook.yml
+++ b/playbook.yml
@@ -10,7 +10,7 @@
 # you provided an instance IP in ``inventory/builders`` for
 # ``gvl-image-hosts`` host group):
 #
-#   % ansible-playbook -i inventory/builders cloud.yml --tags "gvl-image"
+#   % ansible-playbook -i inventory/builders playbook.yml --tags "gvl-image"
 #     --extra-vars vnc_password=<make_up_a_pwd> [--extra-vars cleanup=yes]
 #
 - hosts: gvl-image-hosts
@@ -31,7 +31,7 @@
 # you provided an instance IP in ``inventory/builders`` for
 # ``gvl-filesystem-hosts`` host group):
 #
-#   % ansible-playbook -i inventory/builders cloud.yml --tags "gvl-fs"
+#   % ansible-playbook -i inventory/builders playbook.yml --tags "gvl-fs"
 #
 - hosts: gvl-filesystem-hosts
   sudo: yes
